//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopBusinessType
    {
        public System.Guid RowId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public System.Guid BusinessTypeId { get; set; }
    
        public virtual BusinessType BusinessType { get; set; }
        public virtual Workshop Workshop { get; set; }
    }
}
