//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopBusinessTypeChangeRequest
    {
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2214:DoNotCallOverridableMethodsInConstructors")]
        public WorkshopBusinessTypeChangeRequest()
        {
            this.BusinessTypes = new HashSet<BusinessType>();
        }
    
        public System.Guid RowId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public System.Guid RequestedByEmployeeId { get; set; }
        public byte Status { get; set; }
        public string OwnerComment { get; set; }
        public string ModerationComment { get; set; }
        public Nullable<System.Guid> ModeratedByEmployeeId { get; set; }
        public System.DateTime CreatedAt { get; set; }
        public Nullable<System.DateTime> ModeratedAt { get; set; }
    
        public virtual Employee Employee { get; set; }
        public virtual Workshop Workshop { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<BusinessType> BusinessTypes { get; set; }
    }
}
