//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopOnlineBookingSetting
    {
        public System.Guid WorkshopId { get; set; }
        public int MaxBookingsPerDay { get; set; }
    
        public virtual Workshop Workshop { get; set; }
    }
}
